@@ -1,8 +1,8 @@
-PACKAGE_NAME=LilyPond
+ACPKAGE_NAME=LilyPond
 MAJOR_VERSION=1
 MINOR_VERSION=5
 PATCH_LEVEL=62
-MY_PATCH_LEVEL=
+MY_PATCH_LEVEL=uu1
 
 # Use the above to send patches: MY_PATCH_LEVEL is always empty for a
 # released version.
