@@ -47,7 +47,7 @@
 	(break-glyph-function . ,default-break-barline)
 	(bar-size-procedure . ,Bar_line::get_staff_bar_size)
 	(molecule-callback . ,Bar_line::brew_molecule)	   
-	(visibility-lambda . ,all-visible)
+	(break-visibility . ,all-visible)
 	(breakable . #t)
 	(before-line-breaking-callback . ,Bar_line::before_line_breaking)
 	(space-alist . (
@@ -72,7 +72,7 @@
      . (
 	(molecule-callback . ,Text_item::brew_molecule)
 	(breakable . #t)
-	(visibility-lambda . ,begin-of-line-visible)
+	(break-visibility . ,begin-of-line-visible)
 	(padding . 1.0)
 	(direction . 1)
 	(font-family . roman)
@@ -165,7 +165,7 @@
 	(font-family . music)
 	(text . "scripts-rcomma")
 	(Y-offset-callbacks . (,Breathing_sign::offset_callback))
-	(visibility-lambda . ,begin-of-line-invisible)
+	(break-visibility . ,begin-of-line-invisible)
 	(meta . ((interfaces . (break-aligned-interface breathing-sign-interface text-interface font-interface))))
 	))
 
@@ -176,7 +176,7 @@
 	(breakable . #t)
 	(font-family . music)	   
 	(break-align-symbol . clef)
-	(visibility-lambda . ,begin-of-line-visible)
+	(break-visibility . ,begin-of-line-visible)
 	(space-alist . (
 			(staff-bar . (minimum-space .  3.7))
 			(key-signature . (minimum-space . 4.0))
@@ -202,7 +202,7 @@
 	(break-align-symbol . custos)
 	(breakable . #t)
 	(molecule-callback . ,Custos::brew_molecule)
-	(visibility-lambda . ,end-of-line-visible)
+	(break-visibility . ,end-of-line-visible)
 	(style . vaticana)
 	(neutral-position . 0)
 	(neutral-direction . -1)
@@ -242,7 +242,7 @@
 			  (width . 2.0)
 			  (thickness . 0.48)
 			  (break-align-symbol . staff-bar)
-			  (visibility-lambda . ,begin-of-line-invisible)
+			  (break-visibility . ,begin-of-line-invisible)
 			  (meta . ((interfaces . (font-interface
 						  break-aligned-interface
 						  percent-repeat-interface))))
@@ -348,7 +348,7 @@
 	(self-alignment-Y . 0)
 	(molecule-callback . ,Text_item::brew_molecule)		
 	(break-align-symbol . instrument-name)
-	(visibility-lambda . ,begin-of-line-visible)
+	(break-visibility . ,begin-of-line-visible)
 	(baseline-skip . 2)
 	(font-family . roman)
 	(meta . ((interfaces . (font-interface self-alignment-interface side-position-interface text-interface break-aligned-interface))))
@@ -364,7 +364,7 @@
 			))
 	(Y-offset-callbacks . (,Staff_symbol_referencer::callback))
 	(break-align-symbol . key-signature)
-	(visibility-lambda . ,begin-of-line-visible)
+	(break-visibility . ,begin-of-line-visible)
 	(breakable . #t)
 	(meta . ((interfaces . (key-signature-interface  font-interface  break-aligned-interface))))
 	))
@@ -463,7 +463,7 @@
 	(direction . 1)
 	(breakable . #t)
 	(font-family . roman)
-	(visibility-lambda . ,end-of-line-invisible)
+	(break-visibility . ,end-of-line-invisible)
 	(padding . 0.8)
 	(meta . ((interfaces . (text-interface side-position-interface font-interface mark-interface self-alignment-interface))))
 	))
@@ -553,7 +553,7 @@
      . (
 	(self-alignment-X . 0)
 	(text . "8")
-	(visibility-lambda . ,begin-of-line-visible)
+	(break-visibility . ,begin-of-line-visible)
 	(X-offset-callbacks . (,Self_alignment_interface::centered_on_parent ,Self_alignment_interface::aligned_on_self))
 	(Y-offset-callbacks . (,Side_position_interface::aligned_side))
 	(molecule-callback . ,Text_item::brew_molecule)
@@ -720,7 +720,7 @@
 	(break-align-symbol . staff-bar)
 	(bar-size-procedure . ,Span_bar::get_bar_size) 
 	(molecule-callback . ,Span_bar::brew_molecule)
-	(visibility-lambda . ,begin-of-line-invisible)
+	(break-visibility . ,begin-of-line-invisible)
 	(X-extent-callback . ,Span_bar::width_callback)
 	(Y-extent-callback . ())
 	(breakable . #t)
@@ -743,7 +743,7 @@
 	(breakable . #t)
 	(molecule-callback . ,Text_item::brew_molecule)		
 	(break-align-symbol . clef)
-	(visibility-lambda . ,begin-of-line-visible)
+	(break-visibility . ,begin-of-line-visible)
 	(font-family . roman)
 	(meta . ((interfaces . (break-aligned-interface text-interface font-interface))))		
 	))
@@ -962,7 +962,7 @@
      . (
 	(molecule-callback . ,Time_signature::brew_molecule)
 	(break-align-symbol . time-signature)
-	(visibility-lambda . ,all-visible)
+	(break-visibility . ,all-visible)
 	(space-alist . (
 			(first-note . (extra-space . 2.0))
 			(staff-bar .  (minimum-space . 2.0))
